welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:7: error: not found: value <
    case deltaa < deltab => return a
                ^close10:8: error: not found: value <
    case deltab < deltaa => return b
                ^